3-tier-project/project02/06-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: three-tier
spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 8080
      targetPort: 8080
