3-tier-project/project02/08-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: three-tier
spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - name: http
      port: 8082
      targetPort: 8082
